# lama-huggingface-transformers

./: README.md  pyproject.toml
lama/: __init__.py  configuration_lama.py  modeling_lama.py
tests/: lama_test.py
