[tool.poetry]
name = "lama-huggingface-transformers"
version = "0.1.0"
description = ""
authors = ["Shunsuke KITADA <shunsuke.kitada.0831@gmail.com>"]
readme = "README.md"
packages = [{ include = "lama" }]
package-mode = true

[tool.poetry.dependencies]
python = "^3.10"
transformers = { version = ">=4.6.0", extras = ["torch"] }
torch = ">=1.0.0"

pytorch-lightning = { version = "^2.4.0", optional = true }
omegaconf = { version = "^2.3.0", optional = true }

[tool.poetry.extras]
conversion = ['pytorch-lightning', 'omegaconf']

[tool.poetry.group.dev.dependencies]
ruff = ">=0.1.5"
mypy = ">=1.0.0"
pytest = ">=6.0.0"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
